@@ -62,6 +62,9 @@ New Features
 * SOLR-4088: New and improved auto host detection strategy for SolrCloud.
   (Raintung Li via Mark Miller)
 
+* SOLR-3970: SystemInfoHandler now exposes more details about the 
+  JRE/VM/Java version in use.  (hossman)
+
 Optimizations
 ----------------------
 
